<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.irempakyurek.rickandmorty.entity.Result" />

        <variable
            name="lastSeenEpisodeName"
            type="String" />

        <variable
            name="lastSeenEpisodeAirDate"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CharacterDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_layout"
                android:orientation="vertical"
                android:paddingBottom="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginRight="11dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/cardview_light_background"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number_of_episodes"
                                android:textColor="@color/colorGray"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_number_of_episodes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:text="@{String.valueOf(character.episode.size())}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/cardview_light_background"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textColor="@color/colorGray"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:text="@{character.gender}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/cardview_light_background"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/origin_location_name"
                                android:textColor="@color/colorGray"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_origin_location_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{character.origin.name}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/cardview_light_background"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/last_known_location_name"
                                android:textColor="@color/colorGray"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_last_known_location_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{character.location.name}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/cardview_light_background"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/last_seen_episode_name_and_air_date"
                                android:textColor="@color/colorGray"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_last_seen_episode_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{lastSeenEpisodeName}" />

                            <TextView
                                android:id="@+id/txt_last_seen_episode_air_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{lastSeenEpisodeAirDate}" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_layout"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_character"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/colorListItem"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/status_layout"
                        android:layout_width="6dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorRed"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/colorRed"
                            app:cardCornerRadius="35dp"
                            app:contentPadding="2dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/view1"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:layout_weight="0"
                                android:innerRadius="0dp"
                                android:shape="ring"
                                android:thicknessRatio="1.9"
                                app:cardCornerRadius="35dp">

                                <ImageView
                                    android:id="@+id/img_character_image"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </androidx.cardview.widget.CardView>
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingLeft="10dp">

                            <TextView
                                android:id="@+id/txt_character_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{character.name}"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/txt_character_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{character.status}"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/txt_character_species"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="@{character.species}"
                                android:textColor="@color/colorRed"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/favorite_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_weight="0"
                            android:src="@drawable/ic_star_border" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>